fixed alignment of heading

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,7 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto:100,200,300,400,500,600,700|Exo:100,200,300,400,500,600,700');
 
-
-/* Colours ---------------------------*/
+/*Colors ---------------------------------*/
 
 .ui-menu-color-home {
     background-color: #e67e22;
@@ -23,7 +22,7 @@
     background-color: #676767;
 }
 
-/* Heading ---------------------------*/
+/*Heading -----------------------------------*/
 
 header {
     margin: 0;
@@ -32,7 +31,6 @@ header {
 .heading {
     margin-left: 50px;
 }
-
 
 .logo {
     background: url("../images/rosie.png");
@@ -46,35 +44,31 @@ header {
 }
 
 .name {
-    font: "Exo" , sans-serif;
+    font-family: "Exo", sans-serif;
     font-weight: 100;
     font-size: 46px;
     margin-top: 50px;
-    color: #ffffff;
-
+    color: #fff;
 }
 
 .title {
-    font-family: "Roboto" , sans-serif;
+    font-family: "Roboto", sans-serif;
     font-weight: 200;
     font-size: 28px;
     margin-top: 20px;
     margin-bottom: 90px;
-    color: #ffffff;
-    
+    color: #fff;
 }
 
+.list-inline-item:not(:last-child) {
+    margin: 0;
+}
 
+.menucontainer {
+    font-size: 0;
+}
 
-
-
-
-
-
-
-
-
-
-
-
-
+#nav li {
+    font-size: 14px;
+    padding: 0;
+}
